# dh_workspace

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.sh
projects/chess/: README.md
projects/chess/tests/backend/: test_gameplay.py
projects/chess/tests/resources/: empty_board.txt  pawn_knight_moves.txt
projects/robotics-pointcloud-static/: README.md  index.html  pointcloud.js  styles.css  utils.js
projects/robotics-spherical-pointcloud/: .gitignore  index.html  package.json  vite.config.ts
projects/robotics-spherical-pointcloud/src/: App.tsx  styles.css
src/dh_workspace/: __init__.py  __main__.py  chessboard.py  config.py  logger.py  match.py  pieces.py  placeholder.py
src/dh_workspace/core/: __init__.py  chessboard.py  match.py  moves.py  pieces.py  utils.py
src/dh_workspace/frontend/: ascii_board.py  unicode_board.py
src/dh_workspace/utils/: __init__.py  config.py
src/projects/: __init__.py
src/projects/chess/: README.md  __init__.py  __main__.py
src/projects/linear_algebra/: README.md  __init__.py  transform3d.py
src/projects/reactive_store/: README.md  __init__.py
tests/: test_chessboard.py  test_gameplay.py  test_match.py  test_pieces.py  test_placeholder.py
tests/backend/: test_gameplay.py  test_match.py  test_match_facade.py
tests/frontend/: test_ascii_board.py  test_unicode_board.py
tests/resources/: empty_board.txt  inverted_moves.txt  inverted_starting_board.txt  inverted_starting_board_coords.txt  non_standard_board.txt  starting_board.txt  starting_board_coords.txt
(+25 files in other folders)
