<?xml version="1.0"?>
<package format="2">
  <name>dh_workspace</name>
  <version>0.0.0</version>
  <description>The dh_workspace package</description>
  <maintainer email="davidhernandez@todo.todo">davidhernandez</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
