[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dh_workspace"
version = "0.0.1"
description = "Multi-project prototyping workspace with a chess module"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["example"]

[project.dependencies]
numpy = "*"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
